--- a/css/styles.css
+++ b/css/styles.css
@@ -21,10 +21,37 @@
       url("../fonts/bangers-v20-latin-regular.svg#Bangers") format("svg"); /* Legacy iOS */
 }
 
+/* josefin-slab-regular - latin */
+@font-face {
+  font-family: "Josefin Slab";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/josefin-slab-v20-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("../fonts/josefin-slab-v20-latin-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/josefin-slab-v20-latin-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../fonts/josefin-slab-v20-latin-regular.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/josefin-slab-v20-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/josefin-slab-v20-latin-regular.svg#JosefinSlab")
+      format("svg"); /* Legacy iOS */
+}
+
 h1 {
   font-family: Bangers;
   color: black;
   padding: 16px;
   text-align: center;
   background-color: aliceblue;
+}
+
+.bookmark-card {
+  background-color: blanchedalmond;
+  width: 100%;
+  margin: 32px;
+  padding: 64px;
 }
