--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ h1 {
   background-color: aliceblue;
 }
 
-.bookmark-card {
+.card {
   background-color: blanchedalmond;
   width: 100%;
   margin: 32px;
