question card done

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  box-sizing: border-box;
   font-family: "Josefin Sans";
 }
 
@@ -136,16 +137,74 @@
 }
 
 h1 {
-  font-family: Bangers;
-  color: black;
-  padding: 16px;
+  font-family: Josefin Sans;
+  font-weight: 700;
+  font-size: 32px;
+  text-transform: uppercase;
+  color: white;
+  padding: 24px;
+  width: 100%;
+  height: 80px;
   text-align: center;
-  background-color: aliceblue;
+  background-color: cornflowerblue;
+  position: fixed;
+  top: 0;
+  z-index: 20;
+}
+
+h2 {
+  font-family: Josefin Sans;
+  font-size: 40px;
+  line-height: 56px;
+  font-weight: 200;
+  text-align: center;
+  margin: 0;
+  padding: 32px;
+}
+
+button {
+  font-family: Josefin Sans;
+  font-size: 24px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: white;
+  padding: 24px;
+  margin: 32px;
+  border-style: none;
+  border-radius: 8px;
+  background-color: cornflowerblue;
 }
 
 .card {
-  background-color: blanchedalmond;
-  width: 100%;
+  border-radius: 8px;
+  background-color: linen;
   margin: 32px;
-  padding: 64px;
+  padding: 32px;
+  position: relative;
+  top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  align-self: flex-start;
+}
+
+.tags a {
+  font-weight: 200;
+  color: white;
+  background-color: lightslategrey;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 4px;
+}
+
+.bookmark-card {
+  height: 40px;
+  position: relative;
+  top: -40px;
+  left: 40%;
 }
