--- a/components/header.css
+++ b/components/header.css
@@ -3,12 +3,12 @@ h1 {
   font-weight: 700;
   font-size: 32px;
   text-transform: uppercase;
-  color: white;
+  color: var(--color-0-2);
   padding: 24px;
   width: 100%;
   height: 80px;
   text-align: center;
-  background-color: cornflowerblue;
+  background-color: var(--color-1);
   position: fixed;
   top: 0;
   z-index: 20;
