--- a/components/navbar.css
+++ b/components/navbar.css
@@ -1,5 +1,5 @@
 .navigation {
-  background-color: cornflowerblue;
+  background-color: var(--color-1);
   width: 100%;
   height: 80px;
   position: fixed;
@@ -12,4 +12,9 @@
 
 nav img {
   height: 40px;
+  /* padding: 20px; */
+}
+
+nav img:hover {
+  background-color: var(--color-1-b);
 }
