--- a/components/navbar.css
+++ b/components/navbar.css
@@ -19,5 +19,7 @@ nav img {
 }
 
 nav img:hover {
-  background-color: var(--color-1-b);
+  /* height: 24px; 
+  background-color: var(--color-1-b); */
+  opacity: 0.7;
 }
