--- a/components/card.css
+++ b/components/card.css
@@ -10,7 +10,7 @@
   align-items: center;
 }
 
-.card__button__bookmark {
+.card__button-bookmark {
   position: relative;
   top: -40px;
   left: 40%;
@@ -18,7 +18,7 @@
   border-style: none;
 }
 
-.card__button__bookmark:hover {
+.card__button-bookmark:hover {
   background-color: transparent;
 }
 
