--- a/components/header.css
+++ b/components/header.css
@@ -1,7 +1,7 @@
 h1 {
   font-family: Josefin Sans;
   font-weight: 700;
-  font-size: 32px;
+  font-size: 2rem;
   text-transform: uppercase;
   color: var(--color-0-2);
   padding: 24px;
