--- a/components/card.css
+++ b/components/card.css
@@ -1,10 +1,10 @@
 .card {
-  border-radius: 8px;
+  border-radius: 0.5rem;
   background-color: var(--color-2);
   margin: 32px;
   padding: 32px;
   position: relative;
-  top: 80px;
+  top: 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,6 +20,7 @@
 
 .card__button-bookmark:hover {
   background-color: transparent;
+  cursor: pointer;
 }
 
 .card__bookmark {
@@ -33,19 +34,20 @@
 
 .card__question {
   font-family: Josefin Sans;
-  font-size: 40px;
-  line-height: 56px;
+  font-size: 2.5rem;
+  line-height: 3rem;
   font-weight: 200;
   text-align: center;
   margin: 0;
-  padding: 32px;
+  padding: 24px;
 }
 
 .card__answer {
-  font-size: 32px;
-  line-height: 48px;
+  font-size: 1.5rem;
+  line-height: 2rem;
   font-weight: 400;
   text-align: center;
+  padding: 40px;
 }
 
 .card__answer--off {
@@ -53,7 +55,7 @@
 }
 
 .card__button-answer {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 700;
   text-transform: uppercase;
   color: var(--color-0-2);
@@ -81,5 +83,5 @@
   background-color: var(--color-3);
   padding: 8px;
   margin: 48px 8px 8px 8px;
-  border-radius: 4px;
+  border-radius: 0.25rem4px;
 }
