--- a/components/card.css
+++ b/components/card.css
@@ -1,5 +1,5 @@
 .card {
-  border-radius: 0.5rem;
+  border-radius: 8px;
   background-color: var(--color-2);
   margin: 32px;
   padding: 32px;
@@ -83,5 +83,5 @@
   background-color: var(--color-3);
   padding: 8px;
   margin: 48px 8px 8px 8px;
-  border-radius: 0.25rem4px;
+  border-radius: 4px;
 }
