--- a/components/header.css
+++ b/components/header.css
@@ -1,15 +1,15 @@
 h1 {
-  font-family: Josefin Sans;
-  font-weight: 700;
+  position: fixed;
+  z-index: 20;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 1.5rem;
+  font-family: "Bangers";
+  font-weight: 400;
   font-size: 2rem;
   text-transform: uppercase;
   color: var(--color-0-2);
-  padding: 24px;
-  width: 100%;
-  height: 80px;
   text-align: center;
   background-color: var(--color-1);
-  position: fixed;
-  top: 0;
-  z-index: 20;
 }
