--- a/components/navbar.css
+++ b/components/navbar.css
@@ -1,19 +1,30 @@
 .navigation {
   background-color: var(--color-1);
-  width: 100vw;
-  height: 80px;
   position: fixed;
   bottom: 0;
+  left: 0;
+  width: 100vw;
+  /*  height: 80px; */
+}
+
+.navigation__list {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.navigation__list-item {
+  margin: 1rem 0;
+  padding: 0.5rem;
+  width: 100%;
   list-style: none;
   display: flex;
-  justify-content: space-evenly; /* distribute horizontally */
-  /* align-items: center; /* vertical */
+  justify-content: center;
 }
 
 nav img {
-  height: 80px;
-  padding: 20px;
-  position: absolute;
+  height: 36px;
+  /*padding: 20px;*/
+  /*  position: absolute;*/
   bottom: 0;
   aspect-ratio: 1;
 }
