--- a/components/header.css
+++ b/components/header.css
@@ -5,8 +5,8 @@ h1 {
   left: 0;
   width: 100%;
   padding: 1.5rem;
-  font-family: "Bangers";
-  font-weight: 400;
+  font-family: "Josefin Sans";
+  font-weight: 700;
   font-size: 2rem;
   text-transform: uppercase;
   color: var(--color-0-2);
