--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 @import url(components/header.css);
 @import url(components/card.css);
+@import url(components/card-list.css);
+@import url(components/bookmark.css);
 @import url(components/navbar.css);
 
 * {
   margin: 0;
   box-sizing: border-box;
-  font-family: "Josefin Sans";
 }
 
 :root {
@@ -17,6 +18,25 @@
   --color-3: lightslategrey;
 }
 
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+ul li,
+ol li {
+  list-style: none;
+  padding: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
 /* .main {
   overflow-y: auto;
 } */
@@ -26,18 +46,17 @@
   font-family: "Bangers";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/bangers-v20-latin-regular.eot"); /* IE9 Compat Modes */
+  src: url("fonts/bangers-v20-latin-regular.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("../fonts/bangers-v20-latin-regular.eot?#iefix")
+    url("fonts/bangers-v20-latin-regular.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/bangers-v20-latin-regular.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */ url("../fonts/bangers-v20-latin-regular.woff")
+    /* IE6-IE8 */ url("fonts/bangers-v20-latin-regular.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("fonts/bangers-v20-latin-regular.woff")
       format("woff"),
-    /* Modern Browsers */ url("../fonts/bangers-v20-latin-regular.ttf")
+    /* Modern Browsers */ url("fonts/bangers-v20-latin-regular.ttf")
       format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/bangers-v20-latin-regular.svg#Bangers") format("svg"); /* Legacy iOS */
+      url("fonts/bangers-v20-latin-regular.svg#Bangers") format("svg"); /* Legacy iOS */
 }
 
 /* josefin-sans-200 - latin */
@@ -45,73 +64,70 @@
   font-family: "Josefin Sans";
   font-style: normal;
   font-weight: 200;
-  src: url("../fonts/josefin-sans-v25-latin-200.eot"); /* IE9 Compat Modes */
+  src: url("fonts/josefin-sans-v25-latin-200.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("../fonts/josefin-sans-v25-latin-200.eot?#iefix")
+    url("fonts/josefin-sans-v25-latin-200.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/josefin-sans-v25-latin-200.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */ url("../fonts/josefin-sans-v25-latin-200.woff")
+    /* IE6-IE8 */ url("fonts/josefin-sans-v25-latin-200.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("fonts/josefin-sans-v25-latin-200.woff")
       format("woff"),
-    /* Modern Browsers */ url("../fonts/josefin-sans-v25-latin-200.ttf")
+    /* Modern Browsers */ url("fonts/josefin-sans-v25-latin-200.ttf")
       format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/josefin-sans-v25-latin-200.svg#JosefinSans") format("svg"); /* Legacy iOS */
+      url("fonts/josefin-sans-v25-latin-200.svg#JosefinSans") format("svg"); /* Legacy iOS */
 }
 /* josefin-sans-regular - latin */
 @font-face {
   font-family: "Josefin Sans";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/josefin-sans-v25-latin-regular.eot"); /* IE9 Compat Modes */
+  src: url("fonts/josefin-sans-v25-latin-regular.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("../fonts/josefin-sans-v25-latin-regular.eot?#iefix")
+    url("fonts/josefin-sans-v25-latin-regular.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/josefin-sans-v25-latin-regular.woff2")
+    /* IE6-IE8 */ url("fonts/josefin-sans-v25-latin-regular.woff2")
       format("woff2"),
-    /* Super Modern Browsers */
-      url("../fonts/josefin-sans-v25-latin-regular.woff") format("woff"),
-    /* Modern Browsers */ url("../fonts/josefin-sans-v25-latin-regular.ttf")
+    /* Super Modern Browsers */ url("fonts/josefin-sans-v25-latin-regular.woff")
+      format("woff"),
+    /* Modern Browsers */ url("fonts/josefin-sans-v25-latin-regular.ttf")
       format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/josefin-sans-v25-latin-regular.svg#JosefinSans")
-      format("svg"); /* Legacy iOS */
+      url("fonts/josefin-sans-v25-latin-regular.svg#JosefinSans") format("svg"); /* Legacy iOS */
 }
 /* josefin-sans-700 - latin */
 @font-face {
   font-family: "Josefin Sans";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/josefin-sans-v25-latin-700.eot"); /* IE9 Compat Modes */
+  src: url("fonts/josefin-sans-v25-latin-700.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("../fonts/josefin-sans-v25-latin-700.eot?#iefix")
+    url("fonts/josefin-sans-v25-latin-700.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/josefin-sans-v25-latin-700.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */ url("../fonts/josefin-sans-v25-latin-700.woff")
+    /* IE6-IE8 */ url("fonts/josefin-sans-v25-latin-700.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("fonts/josefin-sans-v25-latin-700.woff")
       format("woff"),
-    /* Modern Browsers */ url("../fonts/josefin-sans-v25-latin-700.ttf")
+    /* Modern Browsers */ url("fonts/josefin-sans-v25-latin-700.ttf")
       format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/josefin-sans-v25-latin-700.svg#JosefinSans") format("svg"); /* Legacy iOS */
+      url("fonts/josefin-sans-v25-latin-700.svg#JosefinSans") format("svg"); /* Legacy iOS */
 }
 /* josefin-sans-200italic - latin */
 @font-face {
   font-family: "Josefin Sans";
   font-style: italic;
   font-weight: 200;
-  src: url("../fonts/josefin-sans-v25-latin-200italic.eot"); /* IE9 Compat Modes */
+  src: url("fonts/josefin-sans-v25-latin-200italic.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("../fonts/josefin-sans-v25-latin-200italic.eot?#iefix")
+    url("fonts/josefin-sans-v25-latin-200italic.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/josefin-sans-v25-latin-200italic.woff2")
+    /* IE6-IE8 */ url("fonts/josefin-sans-v25-latin-200italic.woff2")
       format("woff2"),
     /* Super Modern Browsers */
-      url("../fonts/josefin-sans-v25-latin-200italic.woff") format("woff"),
-    /* Modern Browsers */ url("../fonts/josefin-sans-v25-latin-200italic.ttf")
+      url("fonts/josefin-sans-v25-latin-200italic.woff") format("woff"),
+    /* Modern Browsers */ url("fonts/josefin-sans-v25-latin-200italic.ttf")
       format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/josefin-sans-v25-latin-200italic.svg#JosefinSans")
+      url("fonts/josefin-sans-v25-latin-200italic.svg#JosefinSans")
       format("svg"); /* Legacy iOS */
 }
 /* josefin-sans-italic - latin */
@@ -119,36 +135,35 @@
   font-family: "Josefin Sans";
   font-style: italic;
   font-weight: 400;
-  src: url("../fonts/josefin-sans-v25-latin-italic.eot"); /* IE9 Compat Modes */
+  src: url("fonts/josefin-sans-v25-latin-italic.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("../fonts/josefin-sans-v25-latin-italic.eot?#iefix")
+    url("fonts/josefin-sans-v25-latin-italic.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/josefin-sans-v25-latin-italic.woff2")
+    /* IE6-IE8 */ url("fonts/josefin-sans-v25-latin-italic.woff2")
       format("woff2"),
-    /* Super Modern Browsers */
-      url("../fonts/josefin-sans-v25-latin-italic.woff") format("woff"),
-    /* Modern Browsers */ url("../fonts/josefin-sans-v25-latin-italic.ttf")
+    /* Super Modern Browsers */ url("fonts/josefin-sans-v25-latin-italic.woff")
+      format("woff"),
+    /* Modern Browsers */ url("fonts/josefin-sans-v25-latin-italic.ttf")
       format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/josefin-sans-v25-latin-italic.svg#JosefinSans")
-      format("svg"); /* Legacy iOS */
+      url("fonts/josefin-sans-v25-latin-italic.svg#JosefinSans") format("svg"); /* Legacy iOS */
 }
 /* josefin-sans-700italic - latin */
 @font-face {
   font-family: "Josefin Sans";
   font-style: italic;
   font-weight: 700;
-  src: url("../fonts/josefin-sans-v25-latin-700italic.eot"); /* IE9 Compat Modes */
+  src: url("fonts/josefin-sans-v25-latin-700italic.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("../fonts/josefin-sans-v25-latin-700italic.eot?#iefix")
+    url("fonts/josefin-sans-v25-latin-700italic.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/josefin-sans-v25-latin-700italic.woff2")
+    /* IE6-IE8 */ url("fonts/josefin-sans-v25-latin-700italic.woff2")
       format("woff2"),
     /* Super Modern Browsers */
-      url("../fonts/josefin-sans-v25-latin-700italic.woff") format("woff"),
-    /* Modern Browsers */ url("../fonts/josefin-sans-v25-latin-700italic.ttf")
+      url("fonts/josefin-sans-v25-latin-700italic.woff") format("woff"),
+    /* Modern Browsers */ url("fonts/josefin-sans-v25-latin-700italic.ttf")
       format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/josefin-sans-v25-latin-700italic.svg#JosefinSans")
+      url("fonts/josefin-sans-v25-latin-700italic.svg#JosefinSans")
       format("svg"); /* Legacy iOS */
 }
