--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 @import url(components/card-list.css);
 @import url(components/bookmark.css);
 @import url(components/navbar.css);
+@import url(components/form.css);
 
 * {
   margin: 0;
