--- a/components/form.css
+++ b/components/form.css
@@ -1,5 +1,10 @@
 .form {
-  padding: 10rem 6rem 8rem 6rem;
+  font-family: "Josefin Sans";
+  font-weight: 400;
+  padding: 6rem 6rem 8rem 6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 fieldset {
@@ -16,5 +21,5 @@ textarea {
 
 .form__character-count {
   font-size: inherit;
-  color: #666;
+  color: #888;
 }
